@@ -95,6 +95,36 @@ public class JSONGetITest {
     }
 
     @Test
+    public void restAssuredSupportsSpecifyingRequestParamsInGet() throws Exception {
+        expect().body("greeting", equalTo("Greetings John Doe")).when().get("/greet?firstName=John&lastName=Doe");
+    }
+
+    @Test
+    public void restAssuredSupportsSpecifyingRequestParamsInGetWhenAlsoSpecifyingBaseUri() throws Exception {
+        expect().body("greeting", equalTo("Greetings John Doe")).when().get("http://localhost:8080/greet?firstName=John&lastName=Doe");
+    }
+
+    @Test(expected = IllegalArgumentException.class)
+    public void iaeIsThrownWhenMalformedGetParams() throws Exception {
+        expect().body("greeting", equalTo("Greetings John Doe")).when().get("/greet?firstName=John&lastName");
+    }
+
+    @Test(expected = IllegalArgumentException.class)
+    public void iaeIsThrownWhenNoParamsSpecifiedAfterGetPath() throws Exception {
+        expect().body("greeting", equalTo("Greetings John Doe")).when().get("/greet?");
+    }
+
+    @Test(expected = IllegalArgumentException.class)
+    public void iaeIsThrownWhenLastParamInGetRequestIsEmpty() throws Exception {
+        expect().body("greeting", equalTo("Greetings John Doe")).when().get("/greet?firstName=John&lastName=");
+    }
+
+    @Test(expected = IllegalArgumentException.class)
+    public void iaeIsThrownWhenMiddleParamInGetRequestIsEmpty() throws Exception {
+        expect().body("greeting", equalTo("Greetings John Doe")).when().get("/greet?firstName=&lastName=Doe");
+    }
+
+    @Test
     public void newSyntax() throws Exception {
         expect().content("lotto.lottoId", equalTo(5)).when().get("/lotto");
     }
