@@ -1,6 +1,8 @@
 Change log next version
 -----------------------
 * Added support for specifying base path using "RestAssured.basePath = /resource". E.g. let's say that the base URI is http://localhost and base path is "/resource" will make create a request to "http://localhost/resource/something" when doing a 'get("/something")'. Default value is empty. (issue 13)
+* Support for specifying request parameters in the url, e.g. get("/something?param1=first&param2=second").
+
 
 Change 1.0.3 (2011-01-17)
 -------------------------
